sfdx-source/main/default/objects/PC_Exception__c/fields/Day_of_Week_fmla__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week_fmla__c</fullName>
    <description>Converts selected Date to the corresponding day of the week.</description>
    <formula
    >CASE(WEEKDAY(PC_Date__c), 1, &quot;Sunday&quot;, 2, &quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6, &quot;Friday&quot;,
        7, &quot;Saturday&quot;, &quot;N/A&quot;)</formula>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>