sfdx-source/main/default/objects/PC_Exception__c/fields/PC_Service__c.field-meta.xml
<CustomField>
    <fullName>PC_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>PC_Service__c</referenceTo>
    <relationshipName>Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>